--- a/src/main/resources/templates/blog/register.html
+++ b/src/main/resources/templates/blog/register.html
@@ -1,85 +1,81 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dc0e764f9cafeb8b6ce32ae719767467&libraries=services"></script>
 
     <title>Title</title>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid d-flex justify-content-between">
+<!-- 기본 네비게이션 메뉴 -->
+<nav class="navbar navbar-expand-md navbar-light bg-body-tertiary p-0 m-0" style="background-image: url('/navback.webp'); background-size: cover; background-position: center;">
+    <a href="/main/home">
+        <img src="/logo.webp" class="navbar-brand btn p-0 m-0" id="home" style="width: 100px; height: 100px; object-fit: scale-down;">
+    </a>
+    <div class="container-fluid d-flex align-items-center">
 
+        <!-- 네비게이션 메뉴 가운데 정렬 및 간격 넓힘 -->
+        <div class="collapse navbar-collapse me-5" id="navbarSupportedContent">
+            <div class="flex-grow-1 d-flex align-items-center col-8 offset-3 navoff">
+                <ul class="navbar-nav flex-row mb-2 mb-md-0">
+                    <li class="nav-item dropdown col-5 h3">
+                        <a class="nav-link btn poor-story-regular" id="blogTapToggle" href="#">
+                            조잘조잘
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="blogTapToggle">
+                            <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogDetailToggle">블로그</button></li>
+                            <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogVoteToggle">추천 블로그</button></li>
+                        </ul>
+                    </li>
 
-        <div>
-            <button class="nav nav-link" id="home" onclick="location.href='/main'">홈</button>
+                    <li class="nav-item dropdown col-5 offset-4 col-5 h3">
+                        <a class="nav-link btn poor-story-regular" id="placeTapToggle" href="#">
+                            플레이스
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="placeTapToggle">
+                            <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetailToggle">플레이스 블로그</button></li>
+                            <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeVoteToggle">추천 플레이스</button></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown col-6 offset-4 col-5 h3">
+                        <a class="nav-link btn poor-story-regular" id="eventTapToggle" href="#">
+                            공지 및 이벤트
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="eventTapToggle">
+                            <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventDetailToggle">공지사항</button></li>
+                            <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventVoteToggle">이벤트</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
 
+        <!-- 회원가입 및 로그인 버튼을 토글 버튼 왼쪽에 배치 -->
+        <div class="d-flex ms-auto align-items-center justify-content-end flex-nowrap">
+            <button class="btn nav nav-link order-2">회원가입</button>
+            <button class="btn nav nav-link order-3">로그인</button>
 
-        <div class="mx-auto">
-            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                <li class="nav-item dropdown mx-5"> <!-- mx-2로 간격을 넓힘 -->
-                    <button class="nav-link dropdown-toggle" id="blogTap" data-bs-toggle="dropdown" aria-expanded="false">
-                        조잘조잘
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="blogTap">
-                        <li>
-                            <button onclick="location.href='/blog/list'" class="dropdown-item" id="blogDetail">블로그</button>
-                        </li>
-                        <li>
-                            <button onclick="location.href='/blog/list'" class="dropdown-item" id="blogVote">추천 블로그</button>
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="nav-item dropdown mx-5">
-                    <button class="nav-link dropdown-toggle" id="placeTap" data-bs-toggle="dropdown" aria-expanded="false">
-                        플레이스
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="placeTap">
-                        <li>
-                            <button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetail">플레이스 블로그</button>
-                        </li>
-                        <li>
-                            <button onclick="location.href='/placeDetailBoard'" class="dropdown-item" id="placeVote">추천 플레이스</button>
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="nav-item dropdown mx-5">
-                    <button class="nav-link dropdown-toggle" id="eventTap" data-bs-toggle="dropdown" aria-expanded="false">
-                        공지 및 이벤트
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="eventTap">
-                        <li>
-                            <button onclick="location.href='/eventBoard'" class="dropdown-item" id="eventDetail">공지사항</button>
-                        </li>
-                        <li>
-                            <button onclick="location.href='/eventDetailBoard'" class="dropdown-item" id="eventVote">이벤트</button>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-
-        <div class="d-flex justify-content-center">
-            <button class="btn nav nav-link">회원가입</button>
-            <button class="btn nav nav-link">로그인</button>
+            <!-- 토글 버튼은 우측 끝에 고정 -->
+            <button class="navbar-toggler order-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
     </div>
-
 </nav>
 
 <div layout:fragment="content" class="container mt-4">
 
-    <form action="/blog/register" method="post" th:object="${blogDTO}">
+    <form action="/blog/register" method="post" th:object="${blogDTO}" >
         <input type="hidden" name="readCount" value=0>
         <input type="hidden" name="recommendCount" value=0>
         <div class="row">
@@ -145,25 +141,25 @@
 
                 <div class="row">
                     <div  class="d-flex" role="search" action="/board/list" method="get">
-                        <select class="form-select form-select-lg mb-2 mx-2 w-100" aria-label="Large select example" onchange="selectMap(this.value);">
+                        <select class="form-select form-select-lg mb-2 mx-2 w-100" aria-label="Large select example" onchange="selectMap(this.value)" name="cnum">
                             <option selected>지역을 선택하셈</option>
-                            <option value="city1">서울특별시</option>
-                            <option value="city2">부산광역시</option>
-                            <option value="city3">대구광역시</option>
-                            <option value="city4">인천광역시</option>
-                            <option value="city5">광주광역시</option>
-                            <option value="city6">대전광역시</option>
-                            <option value="city7">울산광역시</option>
-                            <option value="city8">세종특별자치시</option>
-                            <option value="city9">경기도 (수원)</option>
-                            <option value="city10">강원특별자치도</option>
-                            <option value="city11">충청북도 (청주)</option>
-                            <option value="city12">충청남도 (홍성)</option>
-                            <option value="city13">전북특별자치도 (전주)</option>
-                            <option value="city14">전라남도 (목포)</option>
-                            <option value="city15">경상북도 (안동)</option>
-                            <option value="city16">경상남도 (창원)</option>
-                            <option value="city17">제주특별자치도</option>
+                            <option value="1">서울특별시</option>
+                            <option value="2">부산광역시</option>
+                            <option value="3">대구광역시</option>
+                            <option value="4">인천광역시</option>
+                            <option value="5">광주광역시</option>
+                            <option value="6">대전광역시</option>
+                            <option value="7">울산광역시</option>
+                            <option value="8">세종특별자치시</option>
+                            <option value="9">경기도 (수원)</option>
+                            <option value="10">강원특별자치도</option>
+                            <option value="11">충청북도 (청주)</option>
+                            <option value="12">충청남도 (홍성)</option>
+                            <option value="13">전북특별자치도 (전주)</option>
+                            <option value="14">전라남도 (목포)</option>
+                            <option value="15">경상북도 (안동)</option>
+                            <option value="16">경상남도 (창원)</option>
+                            <option value="17">제주특별자치도</option>
                         </select>
                     </div>
                 </div>
@@ -176,11 +172,34 @@
 
         <!-- 버튼 (폼 안, div 밖) -->
         <div class="text-center mt-4">
-            <button type="submit" onclick="submitToDB()" class="btn btn-primary">저장</button>
+            <button type="button"  class="btn btn-primary postButton">저장</button>
             <a href="/blog/list" class="btn btn-secondary">목록</a>
         </div>
     </form>
 
+    <script>
+        let gogonum = [];
+        $(document).ready(function () {
+
+
+            $(".postButton").on("click",function (e){
+
+                e.preventDefault()
+
+                console.log(gogonum)
+                for(let i = 0 ; i< gogonum.length; i++){
+                    let str = `<input name="nnum" value="${gogonum[i]}">`
+                    $("form").append(str)
+                }
+                $("form").submit();
+
+
+
+            })
+
+
+        })
+    </script>
 </div>
 
 <!-- Kakao 지도 초기화 -->
@@ -192,6 +211,20 @@
     var selectedMarkerOne = null;
     var selectedMarkerTwo = null;
     var selectedMarkerThree = null;
+
+
+    //포스트
+
+
+
+
+
+
+
+
+
+
+
 
     // 첫 번째 장소 검색
     function searchPlacesOne() {
@@ -364,6 +397,8 @@
                 address_name: cityNameCut(selectedPlace.address_name)
             };
             console.log('1번째 장소:', selectToDB.place1);
+            ajaxx(selectToDB.place1)
+
 
 
         }
@@ -394,6 +429,7 @@
                 address_name: cityNameCut(selectedPlace.address_name)
             };
             console.log('2번째 장소:', selectToDB.place2);
+            ajaxx(selectToDB.place2)
         }
 
         document.getElementById('keywordTwoResult').value = selectedPlace.place_name;
@@ -423,6 +459,7 @@
         }
 
         console.log('3번째 장소:', selectToDB.place3);
+        ajaxx(selectToDB.place3)
 
         document.getElementById('keywordThreeResult').value = selectedPlace.place_name;
         var myModal = bootstrap.Modal.getInstance(document.getElementById('placeModalThree'));
@@ -471,31 +508,54 @@
         place3: null
     };
 
-    function submitToDB() {
+    function submuitToDB() {
         // 선택된 장소 정보가 하나라도 있는지 확인
         if (selectToDB.place1 || selectToDB.place2 || selectToDB.place3) {
+            console.log(selectToDB.place1)
             alert('장소 확인.');
 
+            if(selectToDB.place1){
+                alert('장소 확인1.');
+                // ajaxx(selectToDB.place1)
+
+            }
+            if(selectToDB.place2){
+                alert('장소 확인2.');
+                // ajaxx(selectToDB.place2)
+
+            }
+            if(selectToDB.place3){
+                alert('장소 확인3.');
+                // ajaxx(selectToDB.place3)
+
+            }
+
             // AJAX 요청을 통해 서버로 데이터 전송
-            $.ajax({
-                url: '/savePlaces', // 서버의 엔드포인트 URL
-                type: 'POST',
-                contentType: 'application/json; charset=utf-8',
-                data: JSON.stringify(selectToDB),
-                success: function(PlacesData) {
-                    console.log('장소 정보 저장 성공:', PlacesData);
-                    // 저장 성공 후 추가 동작이 필요하면 여기서 처리
-                    alert('장소 정보가 저장되었습니다.');
-                },
-                error: function(error) {
-                    console.error('장소 정보 저장 실패:', error);
-                    alert('장소 정보 저장에 실패했습니다.');
-                }
-            });
 
 
         }
+
         return;
+    }
+    function ajaxx(aa) {
+        $.ajax({
+            url: '/blog/savePlaces', // 서버의 엔드포인트 URL
+            type: 'POST',
+            contentType: 'application/json; charset=utf-8',     //보내는 타입
+            data: JSON.stringify(aa),
+            // dataType : 'text',
+            success: function(PlacesData) {
+                console.log('장소 정보 저장 성공:', PlacesData);
+                // 저장 성공 후 추가 동작이 필요하면 여기서 처리
+                alert('장소 정보가 저장되었습니다.');
+
+                gogonum.push(PlacesData)
+            },
+            error: function(error) {
+                console.error('장소 정보 저장 실패:', error);
+                alert('장소 정보 저장에 실패했습니다.');
+            }
+        });
     }
 
     const cityMapping = {
@@ -559,6 +619,76 @@
         </div>
     </div>
 </div>
+
+<style>
+    /* 호버 시 드롭다운 메뉴가 나타나게 설정 */
+    .nav-item.dropdown:hover .dropdown-menu {
+        display: block;
+    }
+
+    /* 메뉴 항목에 마우스를 올렸을 때 글씨 색 변경 */
+    .nav-link:hover {
+        color: #d0e7ff !important;
+    }
+
+    /* 드롭다운이 열려 있는 동안에도 상위 메뉴 항목에 색 유지 */
+    .nav-item.dropdown:hover .nav-link {
+        color: #d0e7ff !important;
+    }
+
+    /* 1150px 이하에서 offset 제거 */
+    @media (max-width: 1150px) {
+        .offset-4 {
+            margin-left: 0 !important;
+        }
+    }
+
+    /* 768px 이하에서 토글 메뉴가 나올 때 모든 요소를 한 줄로 배치 */
+    @media (max-width: 768px) {
+        .container-fluid {
+            display: flex !important;
+            flex-wrap: nowrap !important; /* 줄바꿈 방지 */
+            justify-content: space-between !important; /* 요소 간 간격 유지 */
+        }
+
+        /* 홈 버튼 줄바꿈 방지 */
+        #home {
+            margin-right: 10px !important;
+            white-space: nowrap !important; /* 줄바꿈 방지 */
+        }
+
+        /* 네비게이션 메뉴 중앙 정렬 조정 */
+        .navbar-nav {
+            display: flex !important;
+            flex-wrap: nowrap !important; /* 메뉴 줄바꿈 방지 */
+            justify-content: center !important; /* 메뉴를 가운데 정렬 */
+        }
+
+        .navbar-nav .nav-item {
+            margin-right: 5px !important;
+            white-space: nowrap !important; /* 줄바꿈 방지 */
+        }
+
+        /* 로그인 및 회원가입 버튼 한 줄 유지 */
+        .d-flex.ms-auto {
+            display: flex !important;
+            flex-wrap: nowrap !important; /* 줄바꿈 방지 */
+            justify-content: flex-end !important; /* 오른쪽 정렬 */
+            margin-left: auto !important; /* 오른쪽 끝에 딱 붙게 설정 */
+        }
+
+        /* 회원가입 및 로그인 버튼이 가로로 나열되도록 설정 */
+        .d-flex.ms-auto button {
+            display: inline-block !important; /* 세로 배치 방지 */
+            margin-right: 5px;
+        }
+
+        /* flex-nowrap를 추가하여 버튼들이 가로로만 나열되도록 설정 */
+        .flex-nowrap {
+            flex-wrap: nowrap !important;
+        }
+    }
+</style>
 
 </body>
 </html>
