--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -6,8 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -15,42 +13,43 @@
 <div th:fragment="header" class="border rounded bg-light shadow-sm">
 
     <!-- 기본 네비게이션 메뉴 -->
-    <nav class="navbar navbar-expand-md navbar-light bg-body-tertiary">
+    <nav class="navbar navbar-expand-md navbar-light bg-body-tertiary p-0 m-0" style="background-image: url('/navback.webp'); background-size: cover; background-position: center;">
+        <a href="/main/home">
+            <img src="/logo.webp" class="navbar-brand btn p-0 m-0" id="home" style="width: 100px; height: 100px; object-fit: scale-down;">
+        </a>
         <div class="container-fluid d-flex align-items-center">
-            <!-- 홈 버튼 왼쪽에 항상 유지 -->
-            <button class="navbar-brand btn" id="home" onclick="location.href='/maincontent'">홈</button>
 
             <!-- 네비게이션 메뉴 가운데 정렬 및 간격 넓힘 -->
             <div class="collapse navbar-collapse me-5" id="navbarSupportedContent">
-                <div class="flex-grow-1 d-flex justify-content-center align-items-center col-8">
+                <div class="flex-grow-1 d-flex align-items-center col-8 offset-3 navoff">
                     <ul class="navbar-nav flex-row mb-2 mb-md-0">
-                        <li class="nav-item dropdown col-4">
-                            <button class="nav-link btn" id="blogTapToggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <li class="nav-item dropdown col-5 h3">
+                            <a class="nav-link btn poor-story-regular" id="blogTapToggle" href="#">
                                 조잘조잘
-                            </button>
+                            </a>
                             <ul class="dropdown-menu" aria-labelledby="blogTapToggle">
-                                <li><button onclick="location.href='/blog/list'" class="dropdown-item" id="blogDetailToggle">블로그</button></li>
-                                <li><button onclick="location.href='/blog/list'" class="dropdown-item" id="blogVoteToggle">추천 블로그</button></li>
+                                <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogDetailToggle">블로그</button></li>
+                                <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogVoteToggle">추천 블로그</button></li>
                             </ul>
                         </li>
 
-                        <li class="nav-item dropdown col-4 offset-4">
-                            <button class="nav-link btn" id="placeTapToggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <li class="nav-item dropdown col-5 offset-4 col-5 h3">
+                            <a class="nav-link btn poor-story-regular" id="placeTapToggle" href="#">
                                 플레이스
-                            </button>
+                            </a>
                             <ul class="dropdown-menu" aria-labelledby="placeTapToggle">
                                 <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetailToggle">플레이스 블로그</button></li>
                                 <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeVoteToggle">추천 플레이스</button></li>
                             </ul>
                         </li>
 
-                        <li class="nav-item dropdown col-6 offset-4">
-                            <button class="nav-link btn" id="eventTapToggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <li class="nav-item dropdown col-6 offset-4 col-5 h3">
+                            <a class="nav-link btn poor-story-regular" id="eventTapToggle" href="#">
                                 공지 및 이벤트
-                            </button>
+                            </a>
                             <ul class="dropdown-menu" aria-labelledby="eventTapToggle">
-                                <li><button onclick="location.href='/event/list'" class="dropdown-item" id="eventDetailToggle">공지사항</button></li>
-                                <li><button onclick="location.href='/event/noticelist'" class="dropdown-item" id="eventVoteToggle">이벤트</button></li>
+                                <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventDetailToggle">공지사항</button></li>
+                                <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventVoteToggle">이벤트</button></li>
                             </ul>
                         </li>
                     </ul>
@@ -81,9 +80,19 @@
             color: #d0e7ff !important;
         }
 
-        /* 1150px 이하에서 offset 제거 */
+        /* 드롭다운이 열려 있는 동안에도 상위 메뉴 항목에 색 유지 */
+        .nav-item.dropdown:hover .nav-link {
+            color: #d0e7ff !important;
+        }
+
+        @media (max-width: 1300px) {
+            .offset-3 {
+                margin-left: 0 !important;
+            }
+        }
+                /* 1150px 이하에서 offset 제거 */
         @media (max-width: 1150px) {
-            .offset-4 {
+            .offset-4, .offset-3 {
                 margin-left: 0 !important;
             }
         }
@@ -95,6 +104,7 @@
                 flex-wrap: nowrap !important; /* 줄바꿈 방지 */
                 justify-content: space-between !important; /* 요소 간 간격 유지 */
             }
+
 
             /* 홈 버튼 줄바꿈 방지 */
             #home {
