--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -10,8 +10,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dc0e764f9cafeb8b6ce32ae719767467&libraries=services"></script>
-
     <title>Title</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+        .poor-story-regular {
+            font-family: "Poor Story", system-ui !important;
+            font-weight: 400 !important;
+            font-style: normal !important;
+        }
+
+    </style>
 </head>
 <body>
 
