--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout.html}">
 
-        xmlns:th="http://www.thymeleaf.org"
-        xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 
+<div layout:fragment="content">
 
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <title>Title</title>
+
 
     <style>
         .table {
@@ -30,123 +33,150 @@
 
     </style>
 
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div class="container">
-    <div class="row mt-5 mb-5">
-        <div class="col">
-            <div class="row">
-                <div class="col mt-3 mb-3 ms-3 me-3">
-                    <div class="card h-100">
-                        <div class="card-body shadow">
-                            <h5 class="card-title ">Top 5 블로그</h5>
-                            <div class="row thead  mt-3">
-                                <div class="col-md-2">순위</div>
-                                <div class="col-md-6">제목</div>
-                                <div class="col-md-2 rec">추천수</div>
-                                <div class="col-md-2 rec">조회수</div>
-                            </div>
-                            <th:block class="mt-0 row table  mt-2 mr-0" th:each="blog,userStat  : ${mainRankBlogDTO}  ">
-                                <div class="row table  mt-2">
-                                    <div class="col-md-2" th:text="${userStat.count}"></div>
-                                    <div class="justify-content-start col-md-6">
-                                        <a class="justify-content-start" th:href="|@{/blog/detale(num=${blog.num})}|"
-                                           th:text="${#strings.length(blog.title)>10?#strings.substring(blog.title,0,10)+'...':blog.title}">
-                                            [[${blog.title}]]
-                                        </a>
-                                    </div>
-                                    <div class="col-md-2 rec1">
-                                        [[${blog.recommendCount}]]
-                                    </div>
-                                    <div class="col-md-2 rec1">
-                                        [[${blog.readCount}]]
-                                    </div>
+
+
+    <div id="carouselExampleAutoplaying" class="carousel slide mt-5 d-flex justify-content-center" data-bs-ride="carousel">
+
+        <div class="carousel-inner" style="width: 61vw; height: 43vh;">
+            <div class="carousel-item active w-100 h-100">
+                <img src="/1.png" class="w-100 h-100" style="object-fit: fill">
+            </div>
+            <div class="carousel-item w-100 h-100">
+                <img src="/2.jpg" class="w-100 h-100" style="object-fit: fill;">
+            </div>
+            <div class="carousel-item w-100 h-100">
+                <img src="/3.webp" class="w-100 h-100" style="object-fit: fill;">
+            </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+
+
+
+
+    <div class="container">
+        <div class="row mt-5 mb-5">
+            <div class="col">
+                <div class="row">
+                    <div class="col mt-3 mb-3 ms-3 me-3">
+                        <div class="card h-100">
+                            <div class="card-body shadow">
+                                <h5 class="card-title ">Top 5 블로그</h5>
+                                <div class="row thead  mt-3">
+                                    <div class="col-md-2">순위</div>
+                                    <div class="col-md-6">제목</div>
+                                    <div class="col-md-2 rec">추천수</div>
+                                    <div class="col-md-2 rec">조회수</div>
                                 </div>
+                                <th:block class="mt-0 row table  mt-2 mr-0" th:each="blog,userStat  : ${mainRankBlogDTO}  ">
+                                    <div class="row table  mt-2">
+                                        <div class="col-md-2" th:text="${userStat.count}"></div>
+                                        <div class="justify-content-start col-md-6">
+                                            <a class="justify-content-start" th:href="|@{/blog/detale(num=${blog.num})}|"
+                                               th:text="${#strings.length(blog.title)>10?#strings.substring(blog.title,0,10)+'...':blog.title}">
+                                                [[${blog.title}]]
+                                            </a>
+                                        </div>
+                                        <div class="col-md-2 rec1">
+                                            [[${blog.recommendCount}]]
+                                        </div>
+                                        <div class="col-md-2 rec1">
+                                            [[${blog.readCount}]]
+                                        </div>
+                                    </div>
 
 
-                            </th:block>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col mt-3 mb-3 ms-3 me-3">
-                    <div class="card h-100">
-                        <div class="card-body shadow">
-                            <h5 class="card-title ">Top 5 플레이스</h5>
-                            <div class="row thead  mt-3">
-                                <div class="col-md-2">순위</div>
-                                <div class="col-md-4">플레이스</div>
-                                <div class="col-md-4 rec">도시</div>
-                                <div class="col-md-2 rec">등록수</div>
+                                </th:block>
                             </div>
-                            <th:block class="mt-0" th:each="place,userStat  : ${mainRankDTO}  ">
-                                <div class="row table  mt-2">
-                                    <div class="col-md-2" th:text="${userStat.count}"></div>
-                                    <div class="justify-content-start col-md-5">
-                                        <a class="justify-content-start"
-                                           th:text="${#strings.length(place.place_name)>10?#strings.substring(place.place_name,0,10)+'...':place.place_name}">
 
-                                        </a>
-                                    </div>
-                                    <div class="col-md-3 justify-content-center rec1">
-                                        [[${#strings.length(place.cname)>5?#strings.substring(place.cname,0,5)+'...':place.cname}]]
-                                    </div>
-                                    <div class="col-md-2 rec1">
-                                        [[${place.total}]]
-                                    </div>
-                                </div>
-
-
-                            </th:block>
                         </div>
                     </div>
-                </div>
-                <div class="col mt-3 mb-3 ms-3 me-3">
-                    <div class="card h-100">
-                        <div class="card-body shadow">
-                            <h5 class="card-title ">Top 5 식당</h5>
-                            <div class="row thead  mt-3">
-                                <div class="col-md-2">순위</div>
-                                <div class="col-md-4">플레이스</div>
-                                <div class="col-md-4 rec">도시</div>
-                                <div class="col-md-2 rec">등록수</div>
-                            </div>
-                            <th:block class="mt-0" th:each="restaurant,userStat  : ${mainRankRestaurantDTO}  ">
-                                <div class="row table  mt-2">
-                                    <div class="col-md-2" th:text="${userStat.count}"></div>
-                                    <div class="justify-content-start col-md-5">
-                                        <a class="justify-content-start"
-                                           th:text="${#strings.length(restaurant.place_name)>10?#strings.substring(restaurant.place_name,0,10)+'...':restaurant.place_name}">
-
-                                        </a>
-                                    </div>
-                                    <div class="col-md-3 justify-content-center rec1">
-                                        [[${#strings.length(restaurant.cname)>5?#strings.substring(restaurant.cname,0,5)+'...':restaurant.cname}]]
-                                    </div>
-                                    <div class="col-md-2 rec1">
-                                        [[${restaurant.total}]]
-                                    </div>
+                    <div class="col mt-3 mb-3 ms-3 me-3">
+                        <div class="card h-100">
+                            <div class="card-body shadow">
+                                <h5 class="card-title ">Top 5 플레이스</h5>
+                                <div class="row thead  mt-3">
+                                    <div class="col-md-2">순위</div>
+                                    <div class="col-md-4">플레이스</div>
+                                    <div class="col-md-4 rec">도시</div>
+                                    <div class="col-md-2 rec">등록수</div>
                                 </div>
+                                <th:block class="mt-0" th:each="place,userStat  : ${mainRankDTO}  ">
+                                    <div class="row table  mt-2">
+                                        <div class="col-md-2" th:text="${userStat.count}"></div>
+                                        <div class="justify-content-start col-md-5">
+                                            <a class="justify-content-start"
+                                               th:text="${#strings.length(place.place_name)>10?#strings.substring(place.place_name,0,10)+'...':place.place_name}">
+
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3 justify-content-center rec1">
+                                            [[${#strings.length(place.cname)>5?#strings.substring(place.cname,0,5)+'...':place.cname}]]
+                                        </div>
+                                        <div class="col-md-2 rec1">
+                                            [[${place.total}]]
+                                        </div>
+                                    </div>
 
 
-                            </th:block>
+                                </th:block>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mt-3 mb-3 ms-3 me-3">
+                        <div class="card h-100">
+                            <div class="card-body shadow">
+                                <h5 class="card-title ">Top 5 식당</h5>
+                                <div class="row thead  mt-3">
+                                    <div class="col-md-2">순위</div>
+                                    <div class="col-md-4">플레이스</div>
+                                    <div class="col-md-4 rec">도시</div>
+                                    <div class="col-md-2 rec">등록수</div>
+                                </div>
+                                <th:block class="mt-0" th:each="restaurant,userStat  : ${mainRankRestaurantDTO}  ">
+                                    <div class="row table  mt-2">
+                                        <div class="col-md-2" th:text="${userStat.count}"></div>
+                                        <div class="justify-content-start col-md-5">
+                                            <a class="justify-content-start"
+                                               th:text="${#strings.length(restaurant.place_name)>10?#strings.substring(restaurant.place_name,0,10)+'...':restaurant.place_name}">
+
+                                            </a>
+                                        </div>
+                                        <div class="col-md-3 justify-content-center rec1">
+                                            [[${#strings.length(restaurant.cname)>5?#strings.substring(restaurant.cname,0,5)+'...':restaurant.cname}]]
+                                        </div>
+                                        <div class="col-md-2 rec1">
+                                            [[${restaurant.total}]]
+                                        </div>
+                                    </div>
+
+
+                                </th:block>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+
+
+    <script th:inline="javascript">
+    </script>
+
+
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
-
-<script th:inline="javascript">
-</script>
-
-
 </body>
 </html>
