HTML 싹다 수정. 베타테스트v2

--- a/src/main/resources/templates/blog/list.html
+++ b/src/main/resources/templates/blog/list.html
@@ -988,7 +988,7 @@
                 `${today.getFullYear()}${String(today.getMonth() + 1).padStart(2, '0')}${String(today.getDate()).padStart(2, '0')}0600` :
                 `${yesterday.getFullYear()}${String(yesterday.getMonth() + 1).padStart(2, '0')}${String(yesterday.getDate()).padStart(2, '0')}1800`;
 
-            const ServiceKey = 'YOUR_API_KEY'; // Replace with your actual service key
+            const ServiceKey = 'wje5hA%2Bnn3R5RgOMpkRjQoneVn2py4RGqQmFJCCZS2IjYEetSvm7HP%2FngICVZN7%2FB0Mj2ig7Xp2oep7%2B4kcrSQ%3D%3D'; // Replace with your actual service key
             const pageNo = 1, numOfRows = 10;
 
             $.ajax({
