--- a/src/main/resources/templates/blog/register.html
+++ b/src/main/resources/templates/blog/register.html
@@ -479,23 +479,23 @@
         let moveLatLon;
 
         switch (selectMap) {
-            case 'city1': moveLatLon = new kakao.maps.LatLng(37.5665, 126.9780); break;
-            case 'city2': moveLatLon = new kakao.maps.LatLng(35.1796, 129.0756); break;
-            case 'city3': moveLatLon = new kakao.maps.LatLng(35.8722, 128.6017); break;
-            case 'city4': moveLatLon = new kakao.maps.LatLng(37.4563, 126.7052); break;
-            case 'city5': moveLatLon = new kakao.maps.LatLng(35.1595, 126.8526); break;
-            case 'city6': moveLatLon = new kakao.maps.LatLng(36.3504, 127.3845); break;
-            case 'city7': moveLatLon = new kakao.maps.LatLng(35.5384, 129.3114); break;
-            case 'city8': moveLatLon = new kakao.maps.LatLng(36.4800, 127.2890); break;
-            case 'city9': moveLatLon = new kakao.maps.LatLng(37.8813, 127.7298); break;
-            case 'city10': moveLatLon = new kakao.maps.LatLng(37.7519, 128.8761); break;
-            case 'city11': moveLatLon = new kakao.maps.LatLng(36.6424, 127.4890); break;
-            case 'city12': moveLatLon = new kakao.maps.LatLng(36.6013, 126.6608); break;
-            case 'city13': moveLatLon = new kakao.maps.LatLng(35.8242, 127.1479); break;
-            case 'city14': moveLatLon = new kakao.maps.LatLng(34.8118, 126.3922); break;
-            case 'city15': moveLatLon = new kakao.maps.LatLng(36.5684, 128.7294); break;
-            case 'city16': moveLatLon = new kakao.maps.LatLng(35.2276, 128.6811); break;
-            case 'city17': moveLatLon = new kakao.maps.LatLng(33.4996, 126.5312); break;
+            case '1': moveLatLon = new kakao.maps.LatLng(37.5665, 126.9780); break;
+            case '2': moveLatLon = new kakao.maps.LatLng(35.1796, 129.0756); break;
+            case '3': moveLatLon = new kakao.maps.LatLng(35.8722, 128.6017); break;
+            case '4': moveLatLon = new kakao.maps.LatLng(37.4563, 126.7052); break;
+            case '5': moveLatLon = new kakao.maps.LatLng(35.1595, 126.8526); break;
+            case '6': moveLatLon = new kakao.maps.LatLng(36.3504, 127.3845); break;
+            case '7': moveLatLon = new kakao.maps.LatLng(35.5384, 129.3114); break;
+            case '8': moveLatLon = new kakao.maps.LatLng(36.4800, 127.2890); break;
+            case '9': moveLatLon = new kakao.maps.LatLng(37.8813, 127.7298); break;
+            case '10': moveLatLon = new kakao.maps.LatLng(37.7519, 128.8761); break;
+            case '11': moveLatLon = new kakao.maps.LatLng(36.6424, 127.4890); break;
+            case '12': moveLatLon = new kakao.maps.LatLng(36.6013, 126.6608); break;
+            case '13': moveLatLon = new kakao.maps.LatLng(35.8242, 127.1479); break;
+            case '14': moveLatLon = new kakao.maps.LatLng(34.8118, 126.3922); break;
+            case '15': moveLatLon = new kakao.maps.LatLng(36.5684, 128.7294); break;
+            case '16': moveLatLon = new kakao.maps.LatLng(35.2276, 128.6811); break;
+            case '17': moveLatLon = new kakao.maps.LatLng(33.4996, 126.5312); break;
             default: moveLatLon = new kakao.maps.LatLng(37.566826, 126.9786567); break;
         }
         map.setCenter(moveLatLon); // 좌표로 지도 중심 이동
