--- a/src/main/resources/templates/blog/detale.html
+++ b/src/main/resources/templates/blog/detale.html
@@ -5,10 +5,6 @@
       layout:decorate="~{layout/layout.html}">
 
 <head>
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -1012,7 +1008,7 @@
                 `${today.getFullYear()}${String(today.getMonth() + 1).padStart(2, '0')}${String(today.getDate()).padStart(2, '0')}0600` :
                 `${yesterday.getFullYear()}${String(yesterday.getMonth() + 1).padStart(2, '0')}${String(yesterday.getDate()).padStart(2, '0')}1800`;
 
-            const ServiceKey = 'YOUR_API_KEY'; // Replace with your actual service key
+            const ServiceKey = 'wje5hA%2Bnn3R5RgOMpkRjQoneVn2py4RGqQmFJCCZS2IjYEetSvm7HP%2FngICVZN7%2FB0Mj2ig7Xp2oep7%2B4kcrSQ%3D%3D'; // Replace with your actual service key
             const pageNo = 1, numOfRows = 10;
 
             $.ajax({
@@ -1041,9 +1037,9 @@
         });
 
     </script>
-
-    </div>
-
 </div>
+
+
+
 </body>
 </html>
