--- a/src/main/resources/templates/blog/register.html
+++ b/src/main/resources/templates/blog/register.html
@@ -16,67 +16,61 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid d-flex justify-content-between">
+<!-- 기본 네비게이션 메뉴 -->
+<nav class="navbar navbar-expand-md navbar-light bg-body-tertiary p-0 m-0" style="background-image: url('/navback.webp'); background-size: cover; background-position: center;">
+    <a href="/main/home">
+        <img src="/logo.webp" class="navbar-brand btn p-0 m-0" id="home" style="width: 100px; height: 100px; object-fit: scale-down;">
+    </a>
+    <div class="container-fluid d-flex align-items-center">
 
+        <!-- 네비게이션 메뉴 가운데 정렬 및 간격 넓힘 -->
+        <div class="collapse navbar-collapse me-5" id="navbarSupportedContent">
+            <div class="flex-grow-1 d-flex align-items-center col-8 offset-3 navoff">
+                <ul class="navbar-nav flex-row mb-2 mb-md-0">
+                    <li class="nav-item dropdown col-5 h3">
+                        <a class="nav-link btn poor-story-regular" id="blogTapToggle" href="#">
+                            조잘조잘
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="blogTapToggle">
+                            <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogDetailToggle">블로그</button></li>
+                            <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogVoteToggle">추천 블로그</button></li>
+                        </ul>
+                    </li>
 
-        <div>
-            <button class="nav nav-link" id="home" onclick="location.href='/main'">홈</button>
+                    <li class="nav-item dropdown col-5 offset-4 col-5 h3">
+                        <a class="nav-link btn poor-story-regular" id="placeTapToggle" href="#">
+                            플레이스
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="placeTapToggle">
+                            <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetailToggle">플레이스 블로그</button></li>
+                            <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeVoteToggle">추천 플레이스</button></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown col-6 offset-4 col-5 h3">
+                        <a class="nav-link btn poor-story-regular" id="eventTapToggle" href="#">
+                            공지 및 이벤트
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="eventTapToggle">
+                            <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventDetailToggle">공지사항</button></li>
+                            <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventVoteToggle">이벤트</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
 
+        <!-- 회원가입 및 로그인 버튼을 토글 버튼 왼쪽에 배치 -->
+        <div class="d-flex ms-auto align-items-center justify-content-end flex-nowrap">
+            <button class="btn nav nav-link order-2">회원가입</button>
+            <button class="btn nav nav-link order-3">로그인</button>
 
-        <div class="mx-auto">
-            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                <li class="nav-item dropdown mx-5"> <!-- mx-2로 간격을 넓힘 -->
-                    <button class="nav-link dropdown-toggle" id="blogTap" data-bs-toggle="dropdown" aria-expanded="false">
-                        조잘조잘
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="blogTap">
-                        <li>
-                            <button onclick="location.href='/blog/list'" class="dropdown-item" id="blogDetail">블로그</button>
-                        </li>
-                        <li>
-                            <button onclick="location.href='/blog/list'" class="dropdown-item" id="blogVote">추천 블로그</button>
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="nav-item dropdown mx-5">
-                    <button class="nav-link dropdown-toggle" id="placeTap" data-bs-toggle="dropdown" aria-expanded="false">
-                        플레이스
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="placeTap">
-                        <li>
-                            <button onclick="location.href='/placeBoard'" class="dropdown-item" id="placeDetail">상세 맛집</button>
-                        </li>
-                        <li>
-                            <button onclick="location.href='/placeDetailBoard'" class="dropdown-item" id="placeVote">추천 맛집</button>
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="nav-item dropdown mx-5">
-                    <button class="nav-link dropdown-toggle" id="eventTap" data-bs-toggle="dropdown" aria-expanded="false">
-                        맛집
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="eventTap">
-                        <li>
-                            <button onclick="location.href='/eventBoard'" class="dropdown-item" id="eventDetail">공지사항</button>
-                        </li>
-                        <li>
-                            <button onclick="location.href='/eventDetailBoard'" class="dropdown-item" id="eventVote">이벤트</button>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-
-        <div class="d-flex justify-content-center">
-            <button class="btn nav nav-link">회원가입</button>
-            <button class="btn nav nav-link">로그인</button>
+            <!-- 토글 버튼은 우측 끝에 고정 -->
+            <button class="navbar-toggler order-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
     </div>
-
 </nav>
 
 <div layout:fragment="content" class="container mt-4">
@@ -485,23 +479,23 @@
         let moveLatLon;
 
         switch (selectMap) {
-            case 'city1': moveLatLon = new kakao.maps.LatLng(37.5665, 126.9780); break;
-            case 'city2': moveLatLon = new kakao.maps.LatLng(35.1796, 129.0756); break;
-            case 'city3': moveLatLon = new kakao.maps.LatLng(35.8722, 128.6017); break;
-            case 'city4': moveLatLon = new kakao.maps.LatLng(37.4563, 126.7052); break;
-            case 'city5': moveLatLon = new kakao.maps.LatLng(35.1595, 126.8526); break;
-            case 'city6': moveLatLon = new kakao.maps.LatLng(36.3504, 127.3845); break;
-            case 'city7': moveLatLon = new kakao.maps.LatLng(35.5384, 129.3114); break;
-            case 'city8': moveLatLon = new kakao.maps.LatLng(36.4800, 127.2890); break;
-            case 'city9': moveLatLon = new kakao.maps.LatLng(37.8813, 127.7298); break;
-            case 'city10': moveLatLon = new kakao.maps.LatLng(37.7519, 128.8761); break;
-            case 'city11': moveLatLon = new kakao.maps.LatLng(36.6424, 127.4890); break;
-            case 'city12': moveLatLon = new kakao.maps.LatLng(36.6013, 126.6608); break;
-            case 'city13': moveLatLon = new kakao.maps.LatLng(35.8242, 127.1479); break;
-            case 'city14': moveLatLon = new kakao.maps.LatLng(34.8118, 126.3922); break;
-            case 'city15': moveLatLon = new kakao.maps.LatLng(36.5684, 128.7294); break;
-            case 'city16': moveLatLon = new kakao.maps.LatLng(35.2276, 128.6811); break;
-            case 'city17': moveLatLon = new kakao.maps.LatLng(33.4996, 126.5312); break;
+            case '1': moveLatLon = new kakao.maps.LatLng(37.5665, 126.9780); break;
+            case '2': moveLatLon = new kakao.maps.LatLng(35.1796, 129.0756); break;
+            case '3': moveLatLon = new kakao.maps.LatLng(35.8722, 128.6017); break;
+            case '4': moveLatLon = new kakao.maps.LatLng(37.4563, 126.7052); break;
+            case '5': moveLatLon = new kakao.maps.LatLng(35.1595, 126.8526); break;
+            case '6': moveLatLon = new kakao.maps.LatLng(36.3504, 127.3845); break;
+            case '7': moveLatLon = new kakao.maps.LatLng(35.5384, 129.3114); break;
+            case '8': moveLatLon = new kakao.maps.LatLng(36.4800, 127.2890); break;
+            case '9': moveLatLon = new kakao.maps.LatLng(37.8813, 127.7298); break;
+            case '10': moveLatLon = new kakao.maps.LatLng(37.7519, 128.8761); break;
+            case '11': moveLatLon = new kakao.maps.LatLng(36.6424, 127.4890); break;
+            case '12': moveLatLon = new kakao.maps.LatLng(36.6013, 126.6608); break;
+            case '13': moveLatLon = new kakao.maps.LatLng(35.8242, 127.1479); break;
+            case '14': moveLatLon = new kakao.maps.LatLng(34.8118, 126.3922); break;
+            case '15': moveLatLon = new kakao.maps.LatLng(36.5684, 128.7294); break;
+            case '16': moveLatLon = new kakao.maps.LatLng(35.2276, 128.6811); break;
+            case '17': moveLatLon = new kakao.maps.LatLng(33.4996, 126.5312); break;
             default: moveLatLon = new kakao.maps.LatLng(37.566826, 126.9786567); break;
         }
         map.setCenter(moveLatLon); // 좌표로 지도 중심 이동
@@ -625,6 +619,76 @@
         </div>
     </div>
 </div>
+
+<style>
+    /* 호버 시 드롭다운 메뉴가 나타나게 설정 */
+    .nav-item.dropdown:hover .dropdown-menu {
+        display: block;
+    }
+
+    /* 메뉴 항목에 마우스를 올렸을 때 글씨 색 변경 */
+    .nav-link:hover {
+        color: #d0e7ff !important;
+    }
+
+    /* 드롭다운이 열려 있는 동안에도 상위 메뉴 항목에 색 유지 */
+    .nav-item.dropdown:hover .nav-link {
+        color: #d0e7ff !important;
+    }
+
+    /* 1150px 이하에서 offset 제거 */
+    @media (max-width: 1150px) {
+        .offset-4 {
+            margin-left: 0 !important;
+        }
+    }
+
+    /* 768px 이하에서 토글 메뉴가 나올 때 모든 요소를 한 줄로 배치 */
+    @media (max-width: 768px) {
+        .container-fluid {
+            display: flex !important;
+            flex-wrap: nowrap !important; /* 줄바꿈 방지 */
+            justify-content: space-between !important; /* 요소 간 간격 유지 */
+        }
+
+        /* 홈 버튼 줄바꿈 방지 */
+        #home {
+            margin-right: 10px !important;
+            white-space: nowrap !important; /* 줄바꿈 방지 */
+        }
+
+        /* 네비게이션 메뉴 중앙 정렬 조정 */
+        .navbar-nav {
+            display: flex !important;
+            flex-wrap: nowrap !important; /* 메뉴 줄바꿈 방지 */
+            justify-content: center !important; /* 메뉴를 가운데 정렬 */
+        }
+
+        .navbar-nav .nav-item {
+            margin-right: 5px !important;
+            white-space: nowrap !important; /* 줄바꿈 방지 */
+        }
+
+        /* 로그인 및 회원가입 버튼 한 줄 유지 */
+        .d-flex.ms-auto {
+            display: flex !important;
+            flex-wrap: nowrap !important; /* 줄바꿈 방지 */
+            justify-content: flex-end !important; /* 오른쪽 정렬 */
+            margin-left: auto !important; /* 오른쪽 끝에 딱 붙게 설정 */
+        }
+
+        /* 회원가입 및 로그인 버튼이 가로로 나열되도록 설정 */
+        .d-flex.ms-auto button {
+            display: inline-block !important; /* 세로 배치 방지 */
+            margin-right: 5px;
+        }
+
+        /* flex-nowrap를 추가하여 버튼들이 가로로만 나열되도록 설정 */
+        .flex-nowrap {
+            flex-wrap: nowrap !important;
+        }
+    }
+</style>
 
 </body>
 </html>
