--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html
-
-        xmlns:th="http://www.thymeleaf.org"
-        xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout.html}">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-
     <script src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <style>
         .table {
@@ -34,7 +31,7 @@
     <title>Title</title>
 </head>
 <body>
-<div class="container">
+<div layout:fragment="content" class="mt-2 border rounded bg-light shadow-sm">
     <div class="row mt-5 mb-5 imageSlide">
         <div class="card h-100">
             <div class="card-body shadow ">
@@ -57,7 +54,7 @@
                             </div>
                             <th:block class="mt-0 row table  mt-2 mr-0" th:each="blog,userStat  : ${mainRankBlogDTO}  ">
                                 <div class="row table  mt-2">
-                                    <div class="col-md-2" th:text="${userStat.count}"></div>
+                                    <div class="col-md-2 text-center" th:text="${userStat.count}"></div>
                                     <div class="justify-content-start col-md-6">
                                         <a class="justify-content-start" th:href="|@{/blog/detale(num=${blog.num})}|"
                                            th:text="${#strings.length(blog.title)>10?#strings.substring(blog.title,0,10)+'...':blog.title}">
@@ -90,7 +87,7 @@
                             </div>
                             <th:block class="mt-0" th:each="place,userStat  : ${mainRankDTO}  ">
                                 <div class="row table  mt-2">
-                                    <div class="col-md-2" th:text="${userStat.count}"></div>
+                                    <div class="col-md-2 text-center" th:text="${userStat.count}"></div>
                                     <div class="justify-content-start col-md-5">
                                         <a class="justify-content-start"
                                            th:text="${#strings.length(place.place_name)>10?#strings.substring(place.place_name,0,10)+'...':place.place_name}">
@@ -122,7 +119,7 @@
                             </div>
                             <th:block class="mt-0" th:each="restaurant,userStat  : ${mainRankRestaurantDTO}  ">
                                 <div class="row table  mt-2">
-                                    <div class="col-md-2" th:text="${userStat.count}"></div>
+                                    <div class="col-md-2 text-center" th:text="${userStat.count} "></div>
                                     <div class="justify-content-start col-md-5">
                                         <a class="justify-content-start"
                                            th:text="${#strings.length(restaurant.place_name)>10?#strings.substring(restaurant.place_name,0,10)+'...':restaurant.place_name}">
