--- a/src/main/resources/templates/account/mypage.html
+++ b/src/main/resources/templates/account/mypage.html
@@ -27,7 +27,7 @@
             <div class="text-center mt-4">
                 <a href="/account/modifyprofile" class="btn btn-primary"> 정보 수정 </a>
                 <a href="/account/edit" class="btn btn-secondary"> 비밀번호 변경</a>
-               <!-- <a href="/account/delete" class="btn btn-danger"> 회원 탈퇴</a> -->
+                <a href="/account/delete" class="btn btn-danger"> 회원 탈퇴</a>
             </div>
         </div>
     </div>
