--- a/src/main/resources/templates/blog/list.html
+++ b/src/main/resources/templates/blog/list.html
@@ -103,8 +103,8 @@
                                 </td>
 
                                 <!-- 글 제목 -->
-                                <td style="border: none">
-                                    <a th:href="@{/blog/detale(num=${list.num})}" th:data-num="${list.num}" class="countappend text-decoration-none text-reset">
+                                <td class="text-start" style="border: none">
+                                    <a th:href="@{/blog/detale(num=${list.num})}" th:data-num="${list.num}" class="countappend text-decoration-none text-reset text-start">
                                         [[${list.Title}]]
                                     </a>
                                     <br>
