--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -28,18 +28,18 @@
                                 조잘조잘
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="blogTapToggle">
-                                <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogDetailToggle">블로그</button></li>
-                                <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogVoteToggle">추천 블로그</button></li>
+                                <li><button onclick="location.href='/blog/register'" class="dropdown-item poor-story-regular" id="blogVoteToggle">조잘조잘 작성</button></li>
+                                <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogDetailToggle">조잘조잘 리스트</button></li>
                             </ul>
                         </li>
 
                         <li class="nav-item dropdown col-5 offset-4 col-5 h3">
-                            <a class="nav-link btn poor-story-regular" id="placeTapToggle" href="#">
+                            <a class="nav-link btn poor-story-regular" id="placeTapToggle" onclick="location.href='/place/list'">
                                 플레이스
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="placeTapToggle">
-                                <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetailToggle">플레이스 블로그</button></li>
-                                <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeVoteToggle">추천 플레이스</button></li>
+                                <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetailToggle">플레이스</button></li>
+                                <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeVoteToggle">식당</button></li>
                             </ul>
                         </li>
 
